--- a/Photo1.html
+++ b/Photo1.html
@@ -16,10 +16,10 @@
     <br></br>
     
     <a href="project4.html">Home Page</a>
-     <a href="">Photo 2</a>
-      <a href="">Photo 3</a>
-       <a href="">Photo 4</a>
-        <a href="">Photo 5</a>
+     <a href="Photo2.html">Photo 2</a>
+      <a href="Photo3.html">Photo 3</a>
+       <a href="Photo4.html">Photo 4</a>
+        <a href="Photo5.html">Photo 5</a>
   </body>
 
 </html>
