--- a/project4.html
+++ b/project4.html
@@ -23,7 +23,7 @@
       <p> This Ford Mustang looks very nice and I have always loved old Mustangs. </p>
       
 
-     <a href="Photo.html">
+     <a href="Photo3.html">
       <img src="images/73'-mustang-convertible-TN.jpg" alt="A 1973 Ford Mustang Convertible" />
       </a>
       <p> This Ford Mustang convertible is very similar to a freinds fathers mustange which I envy. </p>
