--- a/project5.html
+++ b/project5.html
@@ -12,14 +12,14 @@
     <br></br>
   <h2> Top Ten </h2>
   <br></br>
-<table boarder="1">
+<table border="1">
   <tr>
     <th>genre</th>
     <th>name</th>
     <th>artist</th>
-    <th>rating</th>
-    
+    <th>rating</th> 
   </tr> 
+  
     <tr>rock</td>
     <tr>Dream On</td>
     <tr>Areosmith</td>
