--- a/project5.html
+++ b/project5.html
@@ -20,70 +20,70 @@
     <th>rating</th> 
   </tr> 
   
-    <tr>rock</td>
+    <tr>Rock</td>
     <tr>Dream On</td>
     <tr>Areosmith</td>
     <tr> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Sweet Child o' Mine</td>
     <td>Guns N' Roses</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Iron Man</td>
     <td>Black Sabbath</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>We're Through</td>
     <td>The Hollies</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Back In Black</td>
     <td>ACDC</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Hotel California</td>
     <td>The Eagles</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Paint It Black</td>
     <td>The Rolling Stones</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Magic Carpet Ride</td>
     <td>Steppenwolf</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>American Pie</td>
     <td>Don McLean</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
-    <td>rock</td> 
+    <td>Rock</td> 
     <td>Renegade</td>
     <td>Styx</td>
     <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
