--- a/project5.html
+++ b/project5.html
@@ -20,10 +20,11 @@
     <th>rating</th> 
   </tr> 
   
-    <tr>Rock</td>
-    <tr>Dream On</td>
-    <tr>Areosmith</td>
-    <tr> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+  <tr>
+    <td>Rock</td>
+    <td>Dream On</td>
+    <td>Areosmith</td>
+    <dr> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
