--- a/project5.html
+++ b/project5.html
@@ -24,70 +24,70 @@
     <td>Rock</td>
     <td>Dream On</td>
     <td>Areosmith</td>
-    <dr> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Sweet Child o' Mine</td>
     <td>Guns N' Roses</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Iron Man</td>
     <td>Black Sabbath</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>We're Through</td>
     <td>The Hollies</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Back In Black</td>
     <td>ACDC</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Hotel California</td>
     <td>The Eagles</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Paint It Black</td>
     <td>The Rolling Stones</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Magic Carpet Ride</td>
     <td>Steppenwolf</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>American Pie</td>
     <td>Don McLean</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
   
   <tr>
     <td>Rock</td> 
     <td>Renegade</td>
     <td>Styx</td>
-    <td> <img src="images/Star_rating_5_of_5.png" alt="Five Star Rating" /> </td>
+    <td> <img src="images/Star_rating_5_of_5.png" width="202" height="43" alt="Five Star Rating" /> </td>
   </tr>
 </table>
 <br></br>
