--- a/project5.html
+++ b/project5.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1> My Favorite Song </h1>
+    <h1> My Favorite Songs </h1>
     <br></br>
   <h2> Top Ten </h2>
   <br></br>
