--- a/project6.html
+++ b/project6.html
@@ -5,12 +5,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My First Web Page</title>
-    <style>
+    <style type="text/css">
     
-    h1 {
- color: red;
- text-align: center;
- }
+    h1 {color: red; text-align: center;}
 
  h2 {
  text-decoration: underline;
