--- a/project6.html
+++ b/project6.html
@@ -7,7 +7,10 @@
     <title>My First Web Page</title>
     <style type="text/css">
     
-    h1 {color: red; text-align: center;}
+ h1 {
+ color: red;
+ text-align: center;
+ }
 
  h2 {
  text-decoration: underline;
