--- a/project9.html
+++ b/project9.html
@@ -38,11 +38,11 @@
     <td>Windy</td>
     </tr>
     <tr>
-    <td> <img src="rain.jpeg" width="" height="" alt="rainy" /> </td>
-    <td> <img src="cloudy.jpeg" width="" height="" alt="cloudy" /> </td>
-    <td> <img src="cloudy.jpeg" width="" height="" alt="cloudy" /> </td>
-    <td> <img src="sunny.jpeg" width="" height="" alt="sunny" /> </td>
-    <td> <img src="stormy.jpeg" width="" height="" alt="stormy" /> </td>
+    <td> <img src="rain.jpeg" alt="rainy" /> </td>
+    <td> <img src="cloudy.jpeg" alt="cloudy" /> </td>
+    <td> <img src="cloudy.jpeg" alt="cloudy" /> </td>
+    <td> <img src="sunny.jpeg" alt="sunny" /> </td>
+    <td> <img src="stormy.jpeg" alt="stormy" /> </td>
     </tr>
     </table>
   </body>
