--- a/project9.html
+++ b/project9.html
@@ -38,10 +38,10 @@
     <td>Windy</td>
     </tr>
     <tr>
-    <td> <img src="images/rain.jpeg" alt="rainy" /> </td>
+    <td> <img src="images/rain.png" alt="rainy" /> </td>
     <td> <img src="images/cloudy.jpeg" alt="cloudy" /> </td>
     <td> <img src="images/cloudy.jpeg" alt="cloudy" /> </td>
-    <td> <img src="images/sunny.jpeg" alt="sunny" /> </td>
+    <td> <img src="images/sunny.png" alt="sunny" /> </td>
     <td> <img src="images/stormy.jpeg" alt="stormy" /> </td>
     </tr>
     </table>
