--- a/project9.html
+++ b/project9.html
@@ -38,11 +38,11 @@
     <td>Windy</td>
     </tr>
     <tr>
-    <td> <img src="images/rain.png" alt="rainy" /> </td>
-    <td> <img src="images/cloudy.jpeg" alt="cloudy" /> </td>
-    <td> <img src="images/cloudy.jpeg" alt="cloudy" /> </td>
-    <td> <img src="images/sunny.png" alt="sunny" /> </td>
-    <td> <img src="images/stormy.jpeg" alt="stormy" /> </td>
+    <td> <img src="images/rain.png" width="110" height="100" alt="rainy" /> </td>
+    <td> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+      <td> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+    <td> <img src="images/sunny.png" width="110" height="100" alt="sunny" /> </td>
+    <td> <img src="images/stormy.jpeg" width="110" height="100" alt="stormy" /> </td>
     </tr>
     </table>
   </body>
