--- a/project9.html
+++ b/project9.html
@@ -9,6 +9,7 @@
     <style type="text/css">  
       
       .border {
+        width: 350px; 
         border-style: dotted;
         border-color: blue;
       }
