--- a/project9.html
+++ b/project9.html
@@ -25,33 +25,33 @@
          <th>Thursday</th>
            <th>Firday</th>
     </tr>
-    <tr>
-    <td class="border">68</td>
-    <td class="border">68</td>
-    <td class="border">70</td>
-    <td class="border">73</td>
-    <td class="border">62</td>
+    <tr class="border">
+    <td>68</td>
+    <td>68</td>
+    <td>70</td>
+    <td>73</td>
+    <td>62</td>
     </tr>
-    <tr>
-    <td class="border">53</td>
-    <td class="border">56</td>
-    <td class="border">52</td>
-    <td class="border">58</td>
-    <td class="border">50</td>
+    <tr class="border">
+    <td>53</td>
+    <td>56</td>
+    <td>52</td>
+    <td>58</td>
+    <td>50</td>
     </tr>
-    <tr>
-    <td class="border">Thunderstorms</td>
-    <td class="border">Partly Cloudy</td>
-    <td class="border">Chance of Rain</td>
-    <td class="border">Clear</td>
-    <td class="border">Windy</td>
+    <tr class="border">
+    <td>Thunderstorms</td>
+    <td>Partly Cloudy</td>
+    <td>Chance of Rain</td>
+    <td>Clear</td>
+    <td>Windy</td>
     </tr>
-    <tr>
-    <td class="border"> <img src="images/rain.png" width="110" height="100" alt="rainy" /> </td>
-    <td class="border"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
-      <td class="border"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
-    <td class="border"> <img src="images/sunny.png" width="110" height="100" alt="sunny" /> </td>
-    <td class="border"> <img src="images/stormy.jpeg" width="110" height="100" alt="stormy" /> </td>
+    <tr class="border">
+    <td> <img src="images/rain.png" width="110" height="100" alt="rainy" /> </td>
+    <td> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+      <td> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+    <td> <img src="images/sunny.png" width="110" height="100" alt="sunny" /> </td>
+    <td> <img src="images/stormy.jpeg" width="110" height="100" alt="stormy" /> </td>
     </tr>
     </table>
   </body>
