--- a/project9.html
+++ b/project9.html
@@ -16,6 +16,9 @@
       .collapse {
       border-collapse: collapse;
       }
+      .headings {
+      background-color: yellow;
+      }
       
     </style>
   </head>
@@ -23,11 +26,11 @@
   <body>
     <table>
     <tr>
-    <th>Monday</th>
-     <th>Tuesday</th>
-       <th>Wednesday</th>
-         <th>Thursday</th>
-           <th>Firday</th>
+    <th class="heading">Monday</th>
+     <th class="heading">Tuesday</th>
+       <th class="heading">Wednesday</th>
+         <th class="heading">Thursday</th>
+           <th class="heading">Firday</th>
     </tr>
     <tr>
     <td class="border collapse">68</td>
