--- a/project9.html
+++ b/project9.html
@@ -12,12 +12,12 @@
         width: 20px; 
         border-style: dotted;
         border-color: blue;
-      }
-      .collapse {
-      border-collapse: collapse;
+        border-collapse: collapse;
       }
       .headings {
       background-color: yellow;
+      border-style: solid;
+      border-collapse: collapse;
       }
       
     </style>
