--- a/project9.html
+++ b/project9.html
@@ -34,32 +34,32 @@
            <th class="heading">Firday</th>
     </tr>
     <tr>
-    <td class="border collapse">68</td>
-    <td class="border collapse">68</td>
-    <td class="border collapse">70</td>
-    <td class="border collapse">73</td>
-    <td class="border collapse">62</td>
+    <td class="border">68</td>
+    <td class="border">68</td>
+    <td class="border">70</td>
+    <td class="border">73</td>
+    <td class="border">62</td>
     </tr>
     <tr>
-    <td class="border collapse">53</td>
-    <td class="border collapse">56</td>
-    <td class="border collapse">52</td>
-    <td class="border collapse">58</td>
-    <td class="border collapse">50</td>
+    <td class="border">53</td>
+    <td class="border">56</td>
+    <td class="border">52</td>
+    <td class="border">58</td>
+    <td class="border">50</td>
     </tr>
     <tr>
-    <td class="border collapse">Thunderstorms</td>
-    <td class="border collapse">Partly Cloudy</td>
-    <td class="border collapse">Chance of Rain</td>
-    <td class="border collapse">Clear</td>
-    <td class="border collapse">Windy</td>
+    <td class="border">Thunderstorms</td>
+    <td class="border">Partly Cloudy</td>
+    <td class="border">Chance of Rain</td>
+    <td class="border">Clear</td>
+    <td class="border">Windy</td>
     </tr>
     <tr>
-    <td class="border collapse"> <img src="images/rain.png" width="110" height="100" alt="rainy" /> </td>
-    <td class="border collapse"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
-      <td class="border collapse"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
-    <td class="border collapse"> <img src="images/sunny.png" width="110" height="100" alt="sunny" /> </td>
-    <td class="border collapse"> <img src="images/stormy.jpeg" width="110" height="100" alt="stormy" /> </td>
+    <td class="border"> <img src="images/rain.png" width="110" height="100" alt="rainy" /> </td>
+    <td class="border"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+      <td class="border"> <img src="images/cloudy.jpeg" width="110" height="100" alt="cloudy" /> </td>
+    <td class="border"> <img src="images/sunny.png" width="110" height="100" alt="sunny" /> </td>
+    <td class="border"> <img src="images/stormy.jpeg" width="110" height="100" alt="stormy" /> </td>
     </tr>
     </table>
   </body>
