--- a/project9.html
+++ b/project9.html
@@ -13,9 +13,9 @@
         border-style: dotted;
         border-color: blue;
         border-collapse: collapse;
-        text-align: center;
       }
-      .headings {
+      
+      .heading {
       background-color: yellow;
       border-style: solid;
       border-collapse: collapse;
