--- a/project9.html
+++ b/project9.html
@@ -13,6 +13,7 @@
         border-style: dotted;
         border-color: blue;
         border-collapse: collapse;
+        text-align: center;
       }
       
       .heading {
