--- a/project9.html
+++ b/project9.html
@@ -12,14 +12,14 @@
         width: 20px; 
         border-style: dotted;
         border-color: blue;
-        border-collapse;
+        border-collapse: collapse;
         text-align: center;
       }
       
       .heading {
       background-color: yellow;
       border-style: solid;
-      border-collapse;
+      border-collapse: collapse;
       }
       
     </style>
