--- a/project9.html
+++ b/project9.html
@@ -28,6 +28,11 @@
       color: blue;
       }
       
+      .header {
+      color: green;
+      text-align: center;
+      }
+      
       table {
       border-collapse: collapse;
       }
@@ -36,6 +41,7 @@
   </head>
 
   <body>
+    <p class="header"> Five Day Weather Forecast </p>
     <table>
     <tr>
     <th class="heading">Monday</th>
