--- a/project9.html
+++ b/project9.html
@@ -42,7 +42,7 @@
 
   <body>
     <p class="header"> Five Day Weather Forecast </p>
-    <table>
+    <table align="center">
     <tr>
     <th class="heading">Monday</th>
      <th class="heading">Tuesday</th>
