--- a/project10.html
+++ b/project10.html
@@ -37,6 +37,12 @@
    background-color: lightblue;
    margin: auto;
    width: 50%;
+   padding-left: 10px;
+   padding-right: 10px;
+      }
+      
+      .heading {
+        text-align: center;
       }
   
     </style>
@@ -44,7 +50,7 @@
 
   <body>
     <div class="main">
-      <h2>cat</h2>
+      <h2 class="heading">cat</h2>
      
    
     <img class="picture" src="images/pexels-photo-177809.jpeg" width="310" height="200" alt="A cat" />
