--- a/project10.html
+++ b/project10.html
@@ -39,6 +39,8 @@
    width: 50%;
    padding-left: 10px;
    padding-right: 10px;
+   width: 310px;
+   height: 210px:
       }
       
       .heading {
