--- a/project11.html
+++ b/project11.html
@@ -50,11 +50,11 @@
   </head>
 
   <body>
-    <div class="header"></div>
-    <div class="nav"></div>
-    <div class="sidebar"></div>
-    <div class="main"></div>
-    <div class="footer"></div>
+    <div class="header">header</div>
+    <div class="nav">nav bar</div>
+    <div class="sidebar">side bar</div>
+    <div class="main">main content</div>
+    <div class="footer">footer</div>
     <div class="floatclear"></div>
   </body>
 
