--- a/project11.html
+++ b/project11.html
@@ -51,8 +51,8 @@
 
   <body>
     <div class="header">header</div>
-    <div class="nav">nav bar</div>
-    <div class="sidebar">side bar</div>
+    <div class="nav floatleft">nav bar</div>
+    <div class="sidebar floatright">side bar</div>
     <div class="main">main content</div>
     <div class="floatclear"></div>
     <div class="footer">footer</div>
