--- a/project12.html
+++ b/project12.html
@@ -72,7 +72,7 @@ link to be orange.*/
     <div class="nav floatleft">
     <a href="index.html">main page</a>
       </br>
-    <a href="project8.html">favorite music table</a>
+    <a href="project8.html">favorite music</a>
       </br>
     <a href="project11.html">basic site code</a>
     </br>
