--- a/project12.html
+++ b/project12.html
@@ -49,7 +49,7 @@
       }
       
       body{
-       background-image: url('images/texture.jpg');
+       background-image: url('images/texture.jpeg');
  background-color: gray;
 }
 
