--- a/project13.html
+++ b/project13.html
@@ -13,12 +13,12 @@
  }
  
  .header{
- background-color: blue;
+ background-color: auqa;
  text-align: center;
  }
  
  .oddrow{
- background-color: green;
+ background-color: lime;
   text-align: center;
  }
  
@@ -41,37 +41,37 @@
 
 <tr class="oddrow">
   <td>Fraction 3/4</td>
-  <td></td>
+  <td>&frac34;	</td>
 </tr>
 
 <tr class="evenrow">
  <td>Copyright</td>
-  <td></td>
+  <td>&copy; </td>
 </tr>
 
 <tr class="oddrow">
  <td>Ampersand</td>
-  <td></td>
+  <td>&amp;</td>
 </tr>
 
 <tr class="evenrow">
  <td>Less than</td>
-  <td></td>
+  <td>&lt;</td>
 </tr>
 
 <tr class="oddrow">
  <td>Greater than</td>
-  <td></td>
+  <td>&gt;</td>
 </tr>
 
 <tr class="evenrow">
  <td>Division</td>
-  <td></td>
+  <td>&divide;</td>
 </tr>
 
 <tr class="oddrow">
  <td>Spade</td>
-  <td></td>
+  <td>&spades;</td>
 </tr>
 
 </table>
