--- a/project13.html
+++ b/project13.html
@@ -27,10 +27,13 @@
   text-align: center;
  }
  
- th,td{
+ th{
    padding: 2px 10px;
       }
  
+ td{
+   padding: 2px 10px;
+      }
  </style>
   </head>
 
