--- a/project14.html
+++ b/project14.html
@@ -24,13 +24,16 @@ div {
  text-align: center;
  }
  
- .div1a2 {
- background-color: #081a38;
- color: white;
+ .div1 {
+ background-color: #dc143c;
  }
+      
+ ,div2 {
+   background-color #da70d6: 
  
  .div3 {
- background-color: #0b4206;
+ background-color: #00173d;
+   color: #ffffff;
  }
  
     </style>
@@ -40,16 +43,16 @@ div {
   
    <h1>Web colors</h1>
    
-   <div class="div1a2">
-   <p>#081a38</p>
+   <div class="div1">
+   <p>#dc143c</p>
    </div>
 
-<div class="div1a2">
- <p>#081a38</p>
+<div class="div2">
+ <p>#da70d6</p>
 </div>
 
 <div class="div3">
-<p>#0b4206</p>
+<p>#00173d</p>
 </div>
 
   </body>
