--- a/project14.html
+++ b/project14.html
@@ -28,9 +28,10 @@ div {
  background-color: #dc143c;
  }
       
- ,div2 {
+ .div2 {
    background-color #da70d6: 
- 
+      }
+      
  .div3 {
  background-color: #00173d;
    color: #ffffff;
