--- a/project16.html
+++ b/project16.html
@@ -19,7 +19,7 @@
         width: 500px;
         padding: 10px 50px;
         background-color: 7491E8;
-        color: white;
+        color: black;
       }
       
       .flag {
