--- a/project20.html
+++ b/project20.html
@@ -8,9 +8,16 @@
   </head>
 
   <body>
-    <form class="feedback">
+   
+    <form>
     Full name:</br>
     <input type="text" name="Name" value="">
+    </br>
+  
+  Year:</br>
+<input type="radio" name="Freshman" value="">
+
+    
     
     </from>
   </body>
