--- a/project20.html
+++ b/project20.html
@@ -15,8 +15,10 @@
     </br>
   
   Year:</br>
-<input type="radio" name="Freshman" value="">
-
+<input type="radio" name="Freshman" value=""></br>
+<input type="radio" name="Sophmore" value=""></br>
+<input type="radio" name="Junior" value=""></br>
+<input type="radio" name="Senior" value=""></br>
     
     
     </from>
