--- a/project20.html
+++ b/project20.html
@@ -15,10 +15,14 @@
     </br>
   
   Year:</br>
-<input type="radio" name="Freshman" value=""></br>
-<input type="radio" name="Sophmore" value=""></br>
-<input type="radio" name="Junior" value=""></br>
-<input type="radio" name="Senior" value=""></br>
+<input type="radio" name="Freshman" value=""> Freshman
+</br>
+<input type="radio" name="Sophmore" value=""> Sophmore
+</br>
+<input type="radio" name="Junior" value=""> Junior
+</br>
+<input type="radio" name="Senior" value=""> Senior
+</br>
     
     
     </from>
