--- a/project20.html
+++ b/project20.html
@@ -23,7 +23,16 @@
 </br>
 <input type="radio" name="Senior" value=""> Senior
 </br>
-    
+
+  Year:</br>
+<input type="checkbox" name="Sports" value=""> Sports
+</br>
+<input type="checkbox" name="Music" value=""> Music
+</br>
+<input type="checkbox" name="Theater" value=""> Theater
+</br>
+<input type="checkbox" name="Other" value=""> Other
+</br>
     
     </from>
   </body>
