--- a/project20.html
+++ b/project20.html
@@ -33,7 +33,13 @@
 </br>
 <input type="checkbox" name="Other" value=""> Other
 </br>
-    
+
+Quarter:</br>
+<select name="quarter">
+  <option value="fall">Fall</option>
+  <option value="winter">Winter</option>
+  <option value="spring">Spring</option>
+</select>
     </from>
   </body>
 
