--- a/project20.html
+++ b/project20.html
@@ -23,7 +23,7 @@
 </br>
 <input type="radio" name="Senior" value=""> Senior
 </br>
-
+</br>
   Year:</br>
 <input type="checkbox" name="Sports" value=""> Sports
 </br>
@@ -33,17 +33,17 @@
 </br>
 <input type="checkbox" name="Other" value=""> Other
 </br>
-
+</br>
 Quarter:</br>
 <select name="quarter">
   <option value="fall">Fall</option>
   <option value="winter">Winter</option>
   <option value="spring">Spring</option>
 </select>
+</br>
 
 Comments:</br>
-<textarea rows="4" cols="50" name="comment" form="usrform">
-  Enter your feedback here.</textarea>
+<textarea name="comment" form="usrform">Enter your feedback here.</textarea>
 </br>
 </br>
 <button type="submit" form="form1" value="Submit">Click Here To Submit</button>
