--- a/project20.html
+++ b/project20.html
@@ -43,7 +43,7 @@ Quarter:</br>
 </br>
 
 Comments:</br>
-<textarea name="comment" form="usrform">Enter your feedback here.</textarea>
+<textarea row="4" col="50" name="comment" form="usrform">Enter your feedback here.</textarea>
 </br>
 </br>
 <button type="submit" form="form1" value="Submit">Click Here To Submit</button>
