--- a/project20.html
+++ b/project20.html
@@ -10,7 +10,7 @@
       
       .form{
         width: 350px;
-        height: 550px;
+        height: 400px;
         background-color: #c1b8c0;
         border: 1px solid black;
         
@@ -48,9 +48,10 @@
 </br>
 Quarter:</br>
 <select name="quarter">
-  <option value="fall">Fall</option>
-  <option value="winter">Winter</option>
-  <option value="spring">Spring</option>
+  <option value="spring">Fall</option>
+  <option value="summer">Winter</option>
+  <option value="fall">Spring</option>
+  <option value="winter">winter</option>
 </select>
 </br>
 
