--- a/project20.html
+++ b/project20.html
@@ -22,6 +22,8 @@
   <body>
    
     <form class=form>
+      <feildset>
+        <legend>Give Us Your Feedback</legend>
     Full name:</br>
     <input type="text" name="Name" value="">
     </br>
@@ -60,7 +62,7 @@ Comments:</br>
 </br>
 </br>
 <button type="submit" form="form1" value="Submit">Click Here To Submit</button>
-  
+  </feildset>
     </from>
   </body>
 
