--- a/project20.html
+++ b/project20.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-   
+   <div>
     <form class=form>
       <feildset>
         <legend>Give Us Your Feedback</legend>
@@ -63,7 +63,9 @@ Comments:</br>
 </br>
 <button type="submit" form="form1" value="Submit">Click Here To Submit</button>
   </feildset>
-    </from>
+    </form>
+</div>
+
   </body>
 
 </html>
