--- a/project20.html
+++ b/project20.html
@@ -25,7 +25,7 @@
 
   <body>
    <div class="q">
-    <form class="form">
+    <form class="form q">
       <feildset>
         <legend>Give Us Your Feedback</legend>
     Full name:</br>
